2006-06-04  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/Makefile.am (pkgdata_PYTHON): Remove _BookReport.py
	* src/plugins/Makefile.am (pkgdata_PYTHON): Move BookReport.py

2006-06-03  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: add Table of Contents mark
	* src/docgen/OpenOfficeDoc.py: add Table of Contents mark
	* src/plugins/DetDecendantReport: add Table of Contents marks
	* src/plugins/AncestorReport.py: add Table of Contents marks
	* src/plugins/DetAncestralReport.py: add Table of Contents marks
	* src/plugins/DecendReport.py: add Table of Contents marks
	* src/plugins/IndivComplete.py: add Table of Contents marks
	* src/plugins/FamilyGroup.py: add Table of Contents marks
	* src/BaseDoc.py: add TOC levels

2006-06-03  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py (BackRefList.right_click): 
	override right click, because Remove and Add have no relevence
	(BackRefList.create_buttons): set tooltips
	* src/FilterEditor/_ShowResults.py: move glade functions to 
	ManagedWindow
	* src/FilterEditor/_EditFilter.py: move glade functions to 
	ManagedWindow
	* src/FilterEditor/_FilterEditor.py: move glade functions to 
	ManagedWindow
	* src/FilterEditor/_EditRule.py: move glade functions to 
	ManagedWindow
	* src/ManagedWindow.py: move glade functions to ManagedWindow

2006-06-02  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/*: use IndexMark
	* src/plugins/DetDecendantReport: use IndexMark
	* src/plugins/AncestorReport.py: use IndexMark
	* src/plugins/DetAncestralReport.py: use IndexMark
	* src/plugins/DecendReport.py: use IndexMark
	* src/plugins/IndivComplete.py: use IndexMark
	* src/plugins/FamilyGroup.py: use IndexMark
	* src/BaseDoc.py: add IndexMark
	* src/ReportBase.py: get_person_index -> get_person_mark

2006-06-02  Don Allingham  <don@gramps-project.org>
	* src/FilterEditor/_ShowResults.py: use list instead of text display
	* src/FilterEditor/_EditFilter.py: clean up